# tinyply

./: CMakeLists.txt
source/: tinyply.cpp  tinyply.h
tests/: CMakeLists.txt  read.cc
